fix post header image alignment

--- a/app/routes/_main.news.$post/index.module.css
+++ b/app/routes/_main.news.$post/index.module.css
@@ -22,6 +22,7 @@
 }
 .image {
   width: 100%;
+  height: auto;
   aspect-ratio: 16/9;
   object-fit: contain;
   object-position: left;
